shifted nav bar left 200px, fixed mobile screen nav, header, and dropdown-menu

--- a/style.css
+++ b/style.css
@@ -609,7 +609,7 @@ img {
 
 .navbar-right {
 	position:absolute;
-	margin-left: 1200px;
+	margin-left: 1000px;
 }
 
 .navbar {
